# linux-programming

StrenthFR/: keepAlive.sh  log.txt  test.sh
StrenthFR/client/: client.cpp  testserver
StrenthFR/dbhandle/: createqun.cpp  createqun.cpp~  db_createinfo  dblogin.cpp~  log  pwdmodify.cpp  pwdmodify.cpp~  register  register.cpp~  upldportrait.cpp~  upldptr
StrenthFR/doc/: readme
StrenthFR/include/: base64.h  datahandle.h  dbhandle.h  eventstruct.h  eventstruct_1124.h
StrenthFR/main/: .main.cpp.swp  Makefile  Makefile.am  V_smile  client  config.status  configure.in  log.txt  main.cpp  nohup.out  result.txt
StrenthFR/main/.deps/: client.Po  datahandle.Po  dbhandle.Po  eventstruct.Po  main.Po  threadpool.Po
StrenthFR/main/autom4te.cache/: requests
StrenthFR/src/: datahandle.cpp  datahandle_old.cpp  dbhandle.cpp  eventstruct.cpp  eventstruct_1124.cpp
StrenthFR/tables/: class_tab.sql  users.sql  zhou_class.sql
StrenthFR/test/: map  test.cpp
V_smile0.7/client/: client.cpp  client.cpp~
V_smile0.7/dbhandle/: addchatrecord  addchatrecord.cpp  addchatrecord.cpp~  createqun  deletequn.cpp~  joinqun  pwdchange.cpp  showchatrecord  showchatrecord.cpp~  testlog.cpp
V_smile0.7/doc/: log.txt
V_smile0.7/include/: datahandle.h  dbhandle.h  dbhandle.h~  eventstruct.h
V_smile0.7/main/: Makefile  Makefile.am  V_smile  client  config.status  main.cpp  main.cpp~
V_smile0.7/src/: datahandle-old.cpp  datahandle.cpp  datahandle.cpp~  dbhandle.cpp  dbhandle.cpp~  (+1 more)
V_smile728/: readme
make/: 2.c  3.c  Makefile2  Makefile3  Makefile5  lsoutput.txt  main.c  myapp
(+100 files in other folders)
